feat: added graphical reports to Receitas and Despesas using chart.js

--- a/GestaoFinanceira/tsconfig.base.json
+++ b/GestaoFinanceira/tsconfig.base.json
@@ -45,6 +45,9 @@
       "@farm/receitas": [
         "libs/feature/financas/src/lib/financas/receitas/src/index.ts"
       ],
+      "@farm/relatorios": [
+        "libs/feature/financas/src/lib/financas/relatorios/src/index.ts"
+      ],
       "@farm/security": [
         "libs/feature/settings/src/lib/settings/security/src/index.ts"
       ],
