--- a/GestaoFinanceira/package.json
+++ b/GestaoFinanceira/package.json
@@ -20,10 +20,12 @@
     "@ngx-translate/core": "^16.0.4",
     "@primeng/themes": "^19.0.9",
     "@tailwindcss/typography": "^0.5.16",
+    "chart.js": "^4.4.9",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.5.1",
+    "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "ng-packagr": "^19.2.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.4.17",
